# Sc2BuildAnalyzer

SbaUi/: CMakeLists.txt  NewProject.cpp  NewProject.h  NewProject.ui  OpenProject.cpp  OpenProject.h  OpenProject.ui
